--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>
+        Hello World!
+    </title>
+</head>
+
+<body>
+    <p>
+        Hello World!
+    </p>
+</body>
+
+</html>
